# dcor

./: .all-contributorsrc  .gitignore  .landscape.yml  .travis.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  pyproject.toml  readthedocs-requirements.txt  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
binder/: requirements.txt  runtime.txt
dcor/: __init__.py  _dcor.py  _dcor_internals.py  _dcor_internals_numba.py  _energy.py  _fast_dcov_avl.py  _fast_dcov_mergesort.py  _hypothesis.py  _pairwise.py  _partial_dcor.py  _rowwise.py  _utils.py  dcor.py  distances.py  homogeneity.py  independence.py
dcor/tests/: __init__.py  speed_permutation.py  test_dcor.py  test_energy.py  test_homogeneity.py  test_independence.py  test_package.py  test_rowwise.py
docs/: .gitignore  Makefile  apilist.rst  citing.rst  conf.py  dcor.rst  dcor.tests.rst  development.rst  energycomparison.rst  index.rst  installation.rst  internalapi.rst  make.bat  performance.rst  refs.bib  theory.rst
docs/_static/: switcher.json
docs/_static/css/: wide.css
examples/: README.rst  plot_dcor_t_test.py  plot_dcor_usage.py  plot_dcov_test.py  plot_distance_correlation.py  plot_energy_test.py  plot_performance.py
